                     CHANGES version 5.35.0

           This file summarizes changes made since 5.0

Version 5.35.0

Fixed: http password file check. Thanks to Francisco Javier Felix Belmonte.


Version 5.34.4

Fixed: If the Monit configuration file contains a string with unbalanced escape sequences, Monit may crash upon startup.

Fixed: If the password in the "set mmonit" URL contains only binary characters, syntax check passed (-t), but Monit aborts after start and reports following error:
        AssertException: n >= 0
         raised in Str_ndup at src/util/Str.c:315
        Aborted

Fixed: If the "every <cron>" statement contained a syntax error, syntax check passed (-t), but Monit aborts after start and reports following error:
        AssertException: n < 5 && n >= 0
         raised in Time_incron at src/system/Time.c:1566
        Aborted

Fixed: If the timeout option value was set to 0, the syntax check was successful (-t), but Monit aborts after starting and reports the following error:
        AssertException: timeout > 0
         raised in Socket_create at src/net/socket.c:319
        Aborted

Fixed: The "set syslog" statement's "facility" option did not permit the specification of the "log_user". Thanks to Lutz Mader for report.

Fixed: Double interpretation of format strings during RETHROW


Version 5.34.3

Fixed: If the ping statement did not explicitly specify an outgoing address but a previous ping statement did, the same address was shared by both statements.

Fixed: Monit may crash upon stopping if the ping statement is used in conjunction with the address option.

Fixed: If a directory is set in the 'allow' option of the 'set httpd' statement, instead of file or string, Monit hangs on start.


Version 5.34.2

Fixed: Network protocol test may sporadically fail with "Poll failed: Interrupted system call" error.


Version 5.34.1

Fixed: The "check program" no longer keeps the zombie process between cycles.


Version 5.34.0
