@@ -4,7 +4,9 @@
 
 Version 5.35.0
 
-Fixed: http password file check. Thanks to Francisco Javier Felix Belmonte.
+Fixed: Monit HTTP interface didn't parse the password file (regression from monit 5.34.4). Thanks to Francisco Javier Felix Belmonte.
+
+Fixed: Monit may hang on exit, if a program executed by "check program" was pending while monit tried to quit (regression from Monit 5.34.1).
 
 
 Version 5.34.4
